primitives/api/test/tests/ui/mock_only_one_error_type.stderr
error: Error type can not change between runtime apis
  --> $DIR/mock_only_one_error_type.rs:23:3
   |
23 |         type Error = u64;
   |         ^^^^

error: First error type was declared here.
  --> $DIR/mock_only_one_error_type.rs:17:16
   |
17 |         type Error = u32;
   |                      ^^^

error[E0277]: the trait bound `u32: From<sp_api_hidden_includes_DECL_RUNTIME_APIS::sp_api::ApiError>` is not satisfied
   --> $DIR/mock_only_one_error_type.rs:17:16
    |
17  |         type Error = u32;
    |                      ^^^ the trait `From<sp_api_hidden_includes_DECL_RUNTIME_APIS::sp_api::ApiError>` is not implemented for `u32`
    |
   ::: $WORKSPACE/primitives/api/src/lib.rs
    |
    |     type Error: std::fmt::Debug + From<ApiError>;
    |                                   -------------- required by this bound in `sp_api_hidden_includes_DECL_RUNTIME_APIS::sp_api::ApiErrorExt::Error`
    |
    = help: the following implementations were found:
              <u32 as From<HttpError>>
              <u32 as From<HttpRequestId>>
              <u32 as From<HttpRequestStatus>>
              <u32 as From<Ipv4Addr>>
            and 18 others
